# python2or3

./: CMakeLists.txt  package.xml
src/: python2or3.c
